public class Persistencia
{
    String conexaoDB;
}   
