@startuml Classes
class Utilizador {
    -id : int
    -nome : string
    -email : string
    -password : string
    -perfil : string
    +registar()
    +login()
    +gerirPerfil()
}

class Transacao {
    -id : int
    -descricao : string
    -valor : double
    -data : Date
    -tipo : string  ' receita ou despesa
    +validar()
    +getters() :void
    +setters() :void
}

class Categoria {
    -id : int
    -nome : string
}

class Relatorio {
    +calcularSaldo() : double
    +totalReceitas(periodo) : double
    +totalDespesas(periodo) : double
    +listarTransacoesPorCategoria(categoria)
}

class Persistencia {
    +guardarDados()
    +carregarDados()
}

Utilizador "1" -- "0..*" Transacao : cria >
Transacao "1" -- "1" Categoria : pertence >
Utilizador "1" -- "0..*" Categoria : define >
Utilizador "1" -- "0..*" Relatorio : consulta >
Utilizador "1" -- "1" Persistencia : usa >
@enduml
